# aquakin

./: .gitignore  .readthedocs.yaml  .test_durations  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  RELEASING.md  codecov.yml  constraints.txt  pyproject.toml
.claude/rules/: core.md  integration.md  models.md  networks.md  plant.md  schema.md
.githooks/: pre-push
.github/workflows/: ci.yml  refresh-test-durations.yml  release.yml
aquakin/: __init__.py
aquakin/core/: __init__.py  conditions.py  context.py  hints.py  introspect.py  model.py  network.py  nodes.py  parser.py  ph_solver.py  precipitation.py  precipitation_equilibrium.py  speciation.py  stoich_resolve.py  temperature.py  units.py  vector_kernel.py
aquakin/integrate/: __init__.py  _common.py  _qmc.py  _simultaneous_corrector.py  _transforms.py  batch.py  biofilm.py  calibrate.py  cfd.py  colored_jacobian.py  design.py  discrete_adjoint.py  events.py  experiments.py  fit.py  forward_sensitivity.py  forward_solve.py  global_sensitivity.py  monte_carlo.py  particle.py  pfr.py  profile.py  scenarios.py  sensitivity.py
aquakin/models/: __init__.py  _make_khalil_balanced.py  _make_khalil_balanced_biofilm.py  _make_khalil_balanced_biofilm_biomass.py  _make_khalil_balanced_biofilm_multispecies.py  _make_khalil_paper.py  _make_khalil_thesis.py  _make_khalil_variants.py  adm1.yaml  asm1.yaml  asm1_ammonia_limitation.yaml  asm2d.yaml  asm2d_chemp.yaml  asm2d_tud.yaml  asm3.yaml  asm3_2step.yaml  asm3_2step_anammox.yaml  asm3_2step_comammox.yaml  asm3_2step_n2o.yaml  asm3_biop.yaml  ozone_bromate.yaml  precipitation_metal_phosphate.yaml  precipitation_metal_phosphate_bounded.yaml  precipitation_metal_phosphate_equilibrium.yaml  precipitation_struvite_calcite.yaml  uv_h2o2.yaml  wats_sewer.yaml  wats_sewer_extended.yaml  wats_sewer_extended_combined.yaml  wats_sewer_extended_directsulfate.yaml  wats_sewer_extended_halforder.yaml  wats_sewer_extended_srbsubstrate.yaml  wats_sewer_extended_v0.yaml  wats_sewer_khalil_paper.yaml  wats_sewer_khalil_paper_balanced.yaml  wats_sewer_khalil_paper_balanced_biofilm.yaml  wats_sewer_khalil_paper_balanced_biofilm_biomass.yaml  wats_sewer_khalil_paper_balanced_biofilm_multispecies.yaml  wats_sewer_khalil_paper_balanced_combined.yaml  wats_sewer_khalil_paper_balanced_directsulfate.yaml  (+8 more)
aquakin/networks/: __init__.py  _fix_sumo_units.py  _make_khalil_balanced.py  _make_khalil_balanced_biofilm.py  _make_khalil_balanced_biofilm_biomass.py  _make_khalil_balanced_biofilm_multispecies.py  _make_khalil_paper.py  _make_khalil_thesis.py  _make_khalil_variants.py  adm1.yaml  asm1.yaml  asm1_ammonia_limitation.yaml  asm2d.yaml  asm2d_chemp.yaml  asm2d_tud.yaml  asm3.yaml  asm3_2step.yaml  asm3_2step_anammox.yaml  asm3_2step_comammox.yaml  asm3_2step_n2o.yaml  asm3_biop.yaml  ozone_bromate.yaml  precipitation_metal_phosphate.yaml  precipitation_metal_phosphate_bounded.yaml  precipitation_metal_phosphate_equilibrium.yaml  precipitation_struvite_calcite.yaml  uv_h2o2.yaml  wats_sewer.yaml  wats_sewer_combined.yaml  wats_sewer_directsulfate.yaml  wats_sewer_extended.yaml  wats_sewer_extended_combined.yaml  wats_sewer_extended_directsulfate.yaml  wats_sewer_extended_halforder.yaml  wats_sewer_extended_srbsubstrate.yaml  wats_sewer_extended_v0.yaml  wats_sewer_halforder.yaml  wats_sewer_khalil.yaml  wats_sewer_khalil_combined.yaml  wats_sewer_khalil_directsulfate.yaml  (+19 more)
aquakin/plant/: __init__.py  _builder_support.py  _constants.py  _flow_split.py  a2o.py  aeration_system.py  balance.py  calibrate.py  characterize.py  clarifier.py  colored.py  control.py  cost.py  coupling.py  cstr.py  delay.py  design.py  digester.py  disinfection.py  dosing.py  errors.py  flow_setpoint.py  ghg.py  ifas.py  influent.py  interfaces.py  mbr.py  metrics.py  mixer.py  plant.py  plant_types.py  primary_clarifier.py  recycle.py  results.py  sbr.py  schedule.py  sensitivity.py  separators.py  settling.py  solve_cache.py  (+7 more)
aquakin/schema/: __init__.py  inheritance.py  loader.py  model_spec.py  network_spec.py
aquakin/transport/: __init__.py
aquakin/utils/: __init__.py  balance.py  composition.py  latex.py  rtd.py  units.py
docs/: Makefile  adding_models.md  adding_networks.md  ci.md  conf.py  getting_started.md  index.md  khalil_reproduction_log.md  model_catalog.md  model_format.md  network_catalog.md  network_format.md  package_structure.md  plant_performance.md  plants.md  public_api.md  reactors.md  sensitivity_and_calibration.md  spec_forward_sensitivity_solver.md
examples/: a2o_bio_p.py  adjoint_speed_benchmark.py  anammox_deammonification.py  batch_bromate.py  bsm1_dry_weather.py  bsm1_dynamic_influent.py  bsm1_target_srt.py  bsm2_evaluation.py  bsm2_ghg_cost_report.py  bsm2_hydraulic_delay.py  bsm2_influent_bypass.py  bsm2_mass_balance.py  bsm2_reject_control.py  bsm2_reject_storage.py  bsm2_seasonal_temperature.py  bsm2_steady_state.py  bsm2_wastage_schedule.py  chemical_p_removal.py  dgsm_sensitivity_screen.py  event_handling.py  ifas_vs_cstr.py  lagrangian_demo.py  plant_parameter_override.py  plot_solution.py  pna_sidestream.py  scenario_monte_carlo.py  sensitivity_demo.py  wats_nitrate_dosing_calibration.py  wats_sewer_batch_validation.py  wats_sewer_calibration.py
examples/data/: wats_sewer_batch_reference.csv
scripts/: benchmark_solve.py  generate_bsm1_influent.py  generate_bsm2_influent.py  sumo_to_aquakin.py  verify_sumo_asm.py
tests/: conftest.py  mem_watchdog.py
tests/fixtures/: dynamic_stoich_model.yaml  dynamic_stoich_network.yaml  simple_model.yaml  simple_network.yaml
tests/integration/: test_a2o.py  test_adaptive_recycle.py  test_aeration.py  test_aeration_system.py  test_asm1.py  test_asm1_ammonia_limitation.py  test_asm2d_chemp.py  test_asm3_2step.py  test_asm3_2step_anammox.py  test_asm3_2step_comammox.py  test_asm3_2step_n2o.py  test_asm_continuity.py  test_asm_family.py  test_asm_published_reference.py  test_batch_simple.py  test_biofilm.py  test_biofilm_variant.py  test_bsm1.py  test_bsm2.py  test_bsm2_bypass.py  test_bsm2_control.py  test_bsm2_dynamic.py  (+65 more)
(+79 files in other folders)
