[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquakin"
version = "0.1.0"
description = "Reactive scalar transport kinetics for aqueous environmental systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aquakin contributors" }]
keywords = ["chemistry", "kinetics", "ozone", "bromate", "jax", "diffrax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "diffrax>=0.5",
    "optimistix>=0.0.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# pandas powers the optional ``to_dataframe()`` / ``to_csv()`` result exporters;
# matplotlib the optional ``sol.plot(...)`` helper. Neither is needed for
# solving, only for postprocessing.
dataframe = ["pandas>=2.0"]
plot = ["matplotlib>=3.5"]
test = ["pytest>=7", "pytest-xdist>=3", "pytest-timeout>=2", "pytest-split>=0.8", "pandas>=2.0", "matplotlib>=3.5"]

[tool.setuptools.packages.find]
include = ["aquakin*"]

[tool.setuptools.package-data]
"aquakin.networks" = ["*.yaml"]
"aquakin.plant.bsm.data" = ["*.csv"]

[tool.pytest.ini_options]
markers = [
    "validation: scientific validation tests against published data (slow)",
    "slow: multi-minute stiff/plant integration tests; excluded from the fast PR gate, run in full on merge to main",
    "heavy: peak-memory-heavy whole-plant stable-adjoint gradient tests (a ~2-5.5 GB compiled plant program each); kept off the free 16 GB runners -- a single one peaks near 16 GB and a shard's worth accumulates compiled programs faster than the allocator frees them, OOM-killing the runner. The slow / validation / smoke / durations jobs all exclude them (`... and not heavy`); they run on the dedicated `heavy` job (a 16-core/64 GB GitHub-hosted larger runner, push-to-main) and locally via `pytest -m heavy`. The stable-adjoint gradient path is also smoke-tested in the fast gate on a small single-CSTR plant.",
]
testpaths = ["tests"]
