[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquakin"
version = "0.1.0"
description = "Reactive scalar transport kinetics for aqueous environmental systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aquakin contributors" }]
keywords = ["chemistry", "kinetics", "ozone", "bromate", "jax", "diffrax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "diffrax>=0.5",
    "optimistix>=0.0.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# pandas powers the optional ``to_dataframe()`` / ``to_csv()`` result exporters;
# matplotlib the optional ``sol.plot(...)`` helper. Neither is needed for
# solving, only for postprocessing.
dataframe = ["pandas>=2.0"]
plot = ["matplotlib>=3.5"]
test = ["pytest>=7", "pytest-xdist>=3", "pytest-timeout>=2", "pytest-split>=0.8", "pandas>=2.0", "matplotlib>=3.5"]

[tool.setuptools.packages.find]
include = ["aquakin*"]

[tool.setuptools.package-data]
"aquakin.networks" = ["*.yaml"]
"aquakin.plant.bsm.data" = ["*.csv"]

[tool.pytest.ini_options]
markers = [
    "validation: scientific validation tests against published data (slow)",
    "slow: multi-minute stiff/plant integration tests; excluded from the fast PR gate, run in full on merge to main",
    "heavy: peak-memory-heavy whole-plant plant-gradient tests (the BSM1 + BSM2 plant-gradient checks; a multi-GB compiled plant program each, with the compile transient peaking higher). A shard's worth accumulates compiled programs faster than the allocator frees them and OOM-kills a shared process, so the dedicated `heavy` job shards them ONE-PER-PROCESS (`-n 1`) across the free 16 GB `ubuntu-latest` runner -- a single test fits, the accumulation is what does not (a demoted BSM1 dynamic-DGSM test OOM-crashed a shared `slow` shard, so `heavy` means \"needs an isolated process\" for BSM1 as much as BSM2). The slow / validation / smoke / durations jobs all exclude them (`... and not heavy`); the free CI job runs `heavy and not xheavy` (see `xheavy`) path-filtered to adjoint/plant changes and on a `full-ci` PR; locally `pytest -m heavy`. The stable-adjoint gradient path is also smoke-tested in the fast gate on a small single-CSTR plant.",
    "xheavy: the ONE heavy test (`test_dynamic_dgsm_matches_dgsm`) that exceeds 16 GB even isolated -- it runs two DGSM engines back-to-back and holds two multi-GB BSM1 `stable_adjoint` adjoint programs live at once. It OOM-crashes the free 16 GB `ubuntu-latest` runner even one-per-process, so it is split off from the free `heavy` job (which runs `heavy and not xheavy`) onto a small larger runner (`aquakin-heavy`, 8-core/32 GB) via the `xheavy` CI job, gated identically (path filter + `full-ci`). `xheavy` IS-A `heavy` (it also carries `heavy`/`slow`), so the slow/validation/smoke jobs still exclude it; `pytest -m heavy` runs it locally.",
]
testpaths = ["tests"]
